--- a/package.json
+++ b/package.json
@@ -7,9 +7,16 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@preact/signals": "^2.3.2",
+		"@tailwindcss/vite": "^4.1.16",
+		"plyr": "^3.8.3",
 		"preact": "^10.26.9",
 		"preact-iso": "^2.11.0",
-		"preact-render-to-string": "^6.6.3"
+		"preact-localstorage": "^1.0.2",
+		"preact-render-to-string": "^6.6.3",
+		"preact-router": "^4.1.2",
+		"swr": "^2.3.6",
+		"tailwindcss": "^4.1.16"
 	},
 	"devDependencies": {
 		"@preact/preset-vite": "^2.10.2",
