--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
 		"@preact/preset-vite": "^2.10.2",
 		"eslint": "^9.39.0",
 		"eslint-config-preact": "^2.0.0",
-		"vite": "^7.0.4"
+		"vite": "^7.0.4",
+		"vite-plugin-pwa": "^1.1.0"
 	},
 	"eslintConfig": {
 		"extends": "preact"
